feat: setup all new features